--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,19 @@ layout: default
   
   {{ content }}
 
+  <div class="tags">
+   <div class="container">
+   <h5>Tags</h5>
+		  <li class="archive_list">
+			<ul class="archive_list">
+			  {% for tag in page.tags %}
+			  <a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a></li>
+			  {% endfor %}
+			</ul>
+		  </li>
+	   </div>
+	</div><!-- end .tags -->
+
   <!-- POST NAVIGATION -->
   <div class="postNav clearfix">
     {% if page.previous.url %} 
